Add voting for time
